<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
                  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_header"
        android:key="pref_key_settings">

        <SwitchPreference
            android:key="notifications_enabled"
            android:summaryOff="@string/notifications_disabled_description"
            android:summaryOn="@string/notifications_enabled_description"
            android:switchTextOff="@string/no"
            android:switchTextOn="@string/yes"
            android:defaultValue="false"
            android:clickable="true"
            android:enabled="true"
            android:selectable="true"/>

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:summary = "@string/max_period"
            android:key="notification_interval"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/notification_period"/>



    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_other_general"
        android:key="pref_key_other_settings">

        <EditTextPreference
            android:key="notifications_text"
            android:title="@string/disp_text"
            android:summary = "@string/enter_text"
            android:defaultValue="@string/default_notifications_text"
            android:selectAllOnFocus="true"
            android:inputType="textPersonName"
            android:capitalize="words"
            android:singleLine="false"
            android:maxLines="1" />
    </PreferenceCategory>

</PreferenceScreen>